chore: add buildpackage.sh

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-io.github.black-desk.debian-tweak (0.1.0-1) UNRELEASED; urgency=medium
+io.github.black-desk.debian-tweak (0.1.0) UNRELEASED; urgency=medium
 
   * Nightly build
 
